# cifartet

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
cifartet/dataset/: make_dataset.py
cifartet/features/: build_features.py
cifartet/models/: deepaas_api.py
cifartet/tests/: test_unit_model.py
cifartet/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-cifartet_start.py2.ipynb  1.0-cifartet_start.py3.ipynb
