[metadata]
name = cifartet
summary = l
description-file =
    README.md
author = lara
author-email = lara.cern@gmail.com
version = 1.0.0
license = MIT
home-page = https://github.com/laramaktub/cifartet
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    cifartet

[entry_points]

deepaas.model = 
    cifartet = cifartet.models.deepaas_api

